# LoRA

./: .gitignore  Final Project Repor.docx  Makefile  PPT_김제니_유인재.pptx  README.md  Report_김제니_유인재.docx  config.py  pyproject.toml
checkpoints/: .gitignore
configs/: full_ft.yaml  lora_perf.yaml  lora_r8_qv.yaml  sweep_alpha.yaml  sweep_method.yaml  sweep_module.yaml  sweep_rank.yaml  zeroshot.yaml
configs/smoke/: lora_highcap.yaml  lora_perf.yaml  lora_perf2.yaml  lora_perf3.yaml  lora_r8_qv.yaml  sweep_alpha.yaml  sweep_method.yaml  sweep_module.yaml  sweep_perf.yaml  sweep_rank.yaml  zeroshot.yaml
data/: __init__.py  format.py  load.py
eval/: __init__.py  metrics.py  sweep.py
lora/: __init__.py  inject.py  layer.py  merge.py
notebooks/: LoRA_medical_QA.ipynb
scripts/: eval.py  generate.py  train.py  verify_datasets.py
tests/: test_data.py  test_lora.py  test_smoke_e2e.py
